--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Jeshan Chhabra",
   "license": "ISC",
   "description": "",
   "dependencies": {
